--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,13 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Javascript
+node_modules
+
 # project-specific
 /html
 .vscode/
-
+screenshots
+report.html
+vireg.css
+screenshot.css
