--- a/vireg/package.json
+++ b/vireg/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.4.7",
     "pixelmatch": "^6.0.0",
     "playwright": "^1.50.1"
   }
